--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -18,6 +18,7 @@
         float:right;
         width: 70%;
     }
+
 }
 
 @media screen and (min-width: 992px){
@@ -29,14 +30,23 @@
     }
 
     section#login > div#imagem{
-        float: left;
+        float: right;
         width: 50%;
         height: 100%;
     }
 
     section#login > div#formu{
-        float:right;
+        float:left;
         width: 50%;
+    }
+
+    div#formu > h1{
+        font-size: 2em;
+    }
+
+
+    div#formu > p{
+        font-size:1.2em;
     }
 }
 
