--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -6,6 +6,7 @@
     }
     section#login{
         width: 80vw;
+        height: 300px;
     }
 
     section#login > div#imagem{
@@ -27,6 +28,7 @@
     }
     section#login{
         width: 950px;
+        height: 310px;
     }
 
     section#login > div#imagem{
