--- a/estilos/style.css
+++ b/estilos/style.css
@@ -30,7 +30,6 @@ section#login{
     position: absolute;
     left: 50%;
     top: 50%;
-    transform: translate(-50%,-50%);
     overflow: hidden;
 
     background-color: white;
@@ -39,6 +38,7 @@ section#login{
     border-radius: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.450);
 
+    transform: translate(-50%,-50%);
     transition: width .3s, heigth .3s;
     transition-timing-function: ease;
 }
@@ -56,6 +56,8 @@ section#login > div#formu{
     padding:10px;
 }
 
+
+
 div#formu > h1{
     text-align: center;
     margin-bottom: 10px;
@@ -64,3 +66,78 @@ div#formu > h1{
 div#formu > p{
     font-size:0.8em;
 }
+
+form > div.campo{
+    background-color: #5f2c82;
+    border: 2px solid #5f2c82;
+    width: 100%;
+    display: block;
+    height: 40px;
+    border-radius: 8px;
+    margin: 5px 0px;
+}
+
+div.campo> i{
+    color: white;
+    font-size: 2em;
+    width: 40px;
+    padding: 5px;
+    
+}
+
+div.campo> input{
+    background-color: #66c6c3;
+    font-size: 1em;
+    height: 100%;
+    width: calc(100% - 45px);
+    border:0px;
+    border-radius: 8px;
+    padding: 2px;
+
+    transform: translateY(-12.5px);
+}
+
+div.campo> input:focus-within{
+    background-color: white;
+    border: none;
+}
+
+form > input[type=submit]{
+    display: block;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    background-color: #49a09d;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+form > input[type=submit]:hover{
+    background-color: #377875;
+}
+
+form > a.botao{
+    display: block;
+    text-align: center;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    background-color: white;
+    color: #377875;
+    border: 1px solid #49a09d;
+    border-radius: 5px;
+    text-decoration: none;
+    margin-top: 5px;
+    padding-top: 7px;
+}
+
+form > a.botao:hover{
+    background-color: #62d3cf;
+}
+
+form > a.botao > i {
+    font-size: .9em;
+}
+
